# gsfm_SS24

./: .gitignore  README.md  pyproject.toml
app/: pipeline.py
data/processed/: analyst_experience.parquet  sic_linking_table.parquet
data/raw/: crisp-computsat-link.csv  link_table_crisp_ibes.csv  link_table_crisp_ibes.parquet
data/raw/sic_processing_files/: crisp-computsat-link.parquet  crsp_link.parquet  crsp_w_ticker_info.parquet  ibes_data_for_sic.parquet
notebooks/: alex_eda.ipynb  alex_eda_feature_generation.ipynb  dv-feature-generation.ipynb  eda_ibes_forecasts.ipynb  eda_summary_statistics.ipynb  feature_gen.ipynb  feature_generation_marius.ipynb  gsfm_analysis.ipynb  marius_eda.ipynb  modeling.ipynb  modelling.ipynb  preprocessing_and_dv.ipynb  summary_statistics_linear_reg.ipynb
preprocessing/: pipeline.py
