[tool.poetry]
name = "guided-studies-in-fin-management"
version = "0.1.0"
description = ""
authors = ["Alexander Moshchev <118296062+moshchev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.4"
polars = "^0.20.10"
jupyter = "^1.0.0"
wrds = "^3.2.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
sqlalchemy = "^2.0.27"
pyod = "^1.1.3"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
